--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,18 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "server\\*.js",
+      "client\\*.js",
+      "client\\index.html",
+      "client\\style.css"
+    ],
+    "ignore": [
+      "*.test.ts"
+    ]
   },
   "keywords": [
     "cell",
@@ -18,6 +29,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "matter-js": "^0.17.1",
     "socket.io": "^4.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
